# stm32-rust-blink

./: Cargo.toml  memory.x  package.json
src/: main.rs
