[package]
name = "stm32f0-rust-blinky"
version = "0.1.0"
authors = ["Mikhail Sementsov <fewebdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-halt = "0.2.0"
stm32f0xx-hal =  { version = "0.17.1", features = ["stm32f051"]}

[profile.release]
debug = true
lto = true
opt-level = "s"
